# cpp-image-converter

ImgConverter/: main.cpp
ImgLib/: CMakeLists.txt  bmp_image.cpp  jpeg_image.cpp  ppm_image.cpp
